fix: rectify alignment in shadowed section in automation

--- a/src/Components/Automation/Automation.css
+++ b/src/Components/Automation/Automation.css
@@ -165,6 +165,10 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1500px) {
+  .automation-section{
+    align-self: center;
+  }
+
   .a11y-button.automation {
     align-self: start;
     margin-top: 30px;
@@ -216,10 +220,10 @@
     margin-left: 20px !important;
   }
 
-  .shadowed-section {
-    padding: 0;
-    align-items: flex-start;
-  }
+  /* .shadowed-section {
+    align-self: unset !important;
+    align-items: center;
+  } */
 
   .second-info .intermediate-image {
     margin-left: 270px;
